Add mailto: links which is not handled very gracefully. Reported by Renato Botelho <freebsd@galle.com.br>.

--- a/test/href_tests.html
+++ b/test/href_tests.html
@@ -13,6 +13,7 @@
 <A HREF="mailto:nobody?subject=Hello">mailto:nobody?subject=Hello</A><BR>
 <A HREF="mailto:nobody?stuff=foo&subject=Hello&bar=jerkybeef">mailto:nobody?stuff=foo&subject=Hello&bar=jerkybeef</A><BR>
 <A HREF="mailto:nobody&subject=crashme ?">mailto:nobody&subject=crashme ?</A><BR>
+<A HREF="mailto:a@b.c,d@e.f?subject=Re:%20ports/79199:%20%5BPATCH%5D%20www%2Flinks%3A%20update%20to%20%32.%31.p%31%37">mailto:a@b.c,d@e.f?subject=Re:%20ports/79199:%20%5BPATCH%5D%20www%2Flinks%3A%20update%20to%20%32.%31.p%31%37</A><BR>
 <HR>
 <A HREF="telnet:127.0.0.1">telnet:127.0.0.1</A><BR>
 <A HREF="telnet:127.0.0.1:25">telnet:127.0.0.1:25</A><BR>
