--- a/test/href_tests.html
+++ b/test/href_tests.html
@@ -14,6 +14,7 @@
 <A HREF="mailto:nobody?stuff=foo&subject=Hello&bar=jerkybeef">mailto:nobody?stuff=foo&subject=Hello&bar=jerkybeef</A><BR>
 <A HREF="mailto:nobody&subject=crashme ?">mailto:nobody&subject=crashme ?</A><BR>
 <A HREF="mailto:a@b.c,d@e.f?subject=Re:%20ports/79199:%20%5BPATCH%5D%20www%2Flinks%3A%20update%20to%20%32.%31.p%31%37">mailto:a@b.c,d@e.f?subject=Re:%20ports/79199:%20%5BPATCH%5D%20www%2Flinks%3A%20update%20to%20%32.%31.p%31%37</A><BR>
+<a href="mailto:git&#64;vger.kernel.org?Subject=Re:%20[PATCH]%20cg-pull:%20summarize%20the%20number%20of%20pulled%20objects">Non working mailto: URL as of (2005-06-04). It gets translated as a local file.</a><br>
 <HR>
 <A HREF="telnet:127.0.0.1">telnet:127.0.0.1</A><BR>
 <A HREF="telnet:127.0.0.1:25">telnet:127.0.0.1:25</A><BR>
